Fix subject capacity issue